sect7-services/network-policy/network-policy.yaml
# REF: https://kubernetes.io/docs/concepts/services-networking/network-policies/
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 172.17.0.0/16
            except:
              - 172.17.1.0/24
        - namespaceSelector:
            matchLabels:
              project: myproject
        - podSelector:
            matchLabels:
              role: frontend
      ports:
        - protocol: TCP
          port: 6379
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.0/24
      ports:
        - protocol: TCP
          port: 5978

# ----------------------------------------------------------------------------------- #
# Network Plolicies begin with 'policyTypes'. For each policy type, there are rules
# associated with it that are the policy.
#   * Rules are always configured from the perspective of the target service.
#   * There are a few ways to isolate traffic:
#       - PodSelector: Selects pods based on labels
#       - NamespaceSelector: Selects namespaces based on labels
#       - IPBlock: Selects based on IP ranges
#   * There are two types of policies:
#       - Ingress: Traffic coming into the service
#       - Egress: Traffic going out of the service
#   * There are two types of rules:
#       - Ports: Selects based on port numbers
#       - Endpoints: Selects based on IP addresses
#   * There are two types of ports:
#       - Protocol: TCP, UDP, SCTP
#       - Port: Port number
#   * There are two types of endpoints:
#       - IP: IP address
#       - Ports: Port number
#   * There are two types of IP blocks:
#       - CIDR: IP range
#       - Except: IP range to exclude
#   * There are two types of selectors:
#       - MatchLabels: Selects based on labels
#       - MatchExpressions: Selects based on expressions
#   * There are two types of expressions:
#       - Key: Label key
#       - Operator: In, NotIn, Exists, DoesNotExist
#       - Values: Label values
#   * There are two types of labels:
#       - Key: Label key
#       - Value: Label value
#   * There are two types of namespaces:
#       - Name: Namespace name
#       - Labels: Namespace labels
#   * There are two types of pods:
#       - Labels: Pod labels
#       - Names: Pod names
# ----------------------------------------------------------------------------------- #
